Fixed clipping of ordinals for IE in an ordered list. Lighthouse Issue #15 (http://blueprintcss.lighthouseapp.com/projects/15318-blueprint-css/tickets/15)

--- a/blueprint/src/ie.css
+++ b/blueprint/src/ie.css
@@ -29,9 +29,6 @@ body { text-align: center; }
 /* Fixes incorrect styling of legend in IE6. */
 * html legend { margin:0px -8px 16px 0; padding:0; }
 
-/* Fixes incorrect placement of ol numbers in IE6/7. */
-ol { margin-left:2em; }
-
 /* Fixes wrong line-height on sup/sub in IE. */
 sup { vertical-align:text-top; }
 sub { vertical-align:text-bottom; }
